- impletmented first person camera controller

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 class learning - unity project/Temp/
 class learning - unity project/Logs/
 class learning - unity project/Library/
+class learning - unity project/obj/
+class learning - unity project/.vs/
