--- a/class learning - unity project/Assembly-CSharp.csproj
+++ b/class learning - unity project/Assembly-CSharp.csproj
@@ -54,9 +54,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\MouseLook.cs" />
-    <Compile Include="Assets\PlayerController.cs" />
-    <Compile Include="Assets\Kick.cs" />
     <Compile Include="Assets\ObjectTeleport.cs" />
+    <Compile Include="Assets\Kick.cs" />
+    <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\Node.cs" />
+    <Compile Include="Assets\DepthFirstSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
