- impletmented core func for an interaction system - impletmented core func for a health system, including a simple health bar - revised grounded of the player, and impletmented crouch funcationality

--- a/class learning - unity project/Assembly-CSharp.csproj
+++ b/class learning - unity project/Assembly-CSharp.csproj
@@ -53,12 +53,18 @@
     <UnityVersion>2020.3.26f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\MouseLook.cs" />
-    <Compile Include="Assets\ObjectTeleport.cs" />
-    <Compile Include="Assets\Kick.cs" />
-    <Compile Include="Assets\PlayerController.cs" />
-    <Compile Include="Assets\Node.cs" />
-    <Compile Include="Assets\DepthFirstSearch.cs" />
+    <Compile Include="Assets\SoccerScripts\MouseLook.cs" />
+    <Compile Include="Assets\SoccerScripts\ObjectTeleport.cs" />
+    <Compile Include="Assets\OOP.cs" />
+    <Compile Include="Assets\SoccerScripts\Kick.cs" />
+    <Compile Include="Assets\NodeScripts\Node.cs" />
+    <Compile Include="Assets\NodeScripts\BreadthFirstSearch.cs" />
+    <Compile Include="Assets\NodeScripts\DepthFirstSearch.cs" />
+    <Compile Include="Assets\SoccerScripts\PlayerController.cs" />
+    <Compile Include="Assets\Interaction.cs" />
+    <Compile Include="Assets\Door.cs" />
+    <Compile Include="Assets\Health.cs" />
+    <Compile Include="Assets\DamageTrigger.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
